--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,12 +11,19 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@tabler/icons-react": "^3.34.1",
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dom": "^0.0.3",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.6",
+    "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.0",
+    "router": "^2.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
