--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,20 +19,20 @@
   "author": "Smart Vitals Team",
   "license": "ISC",
   "dependencies": {
-    "@clerk/clerk-sdk-node": "^4.13.23",
+    "@clerk/express": "^1.7.13",
     "axios": "^1.6.0",
     "bcrypt": "^6.0.0",
     "cloudinary": "^1.41.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.4",
-    "morgan": "^1.10.0",
+    "mongoose": "^8.16.5",
+    "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "openai": "^4.20.1",
     "pdfkit": "^0.14.0"
