--- a/Backend/env.example
+++ b/Backend/env.example
@@ -22,6 +22,9 @@ CLOUDINARY_API_SECRET=your_cloudinary_api_secret
 # OpenAI Configuration (for AI features)
 OPENAI_API_KEY=your_openai_api_key_here
 
+# CalorieMama API Configuration (for food recognition)
+CALORIEMAMA_API_KEY=your_caloriemama_api_key_here
+
 # File Upload Configuration
 MAX_FILE_SIZE=5242880
 UPLOAD_PATH=./uploads
