--- a/Backend/env.example
+++ b/Backend/env.example
@@ -22,6 +22,9 @@ CLOUDINARY_API_SECRET=your_cloudinary_api_secret
 # OpenAI Configuration (for AI features)
 OPENAI_API_KEY=your_openai_api_key_here
 
+# Google Gemini AI Configuration (for Mental Health Chatbot)
+GEMINI_API_KEY=your_gemini_api_key_here
+
 # CalorieMama API Configuration (for food recognition)
 CALORIEMAMA_API_KEY=your_caloriemama_api_key_here
 
@@ -31,4 +34,19 @@ UPLOAD_PATH=./uploads
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100 
+RATE_LIMIT_MAX_REQUESTS=100
+
+# Email Configuration (Gmail)
+EMAIL_USER=your_gmail_address@gmail.com
+EMAIL_APP_PASSWORD=your_gmail_app_password
+
+# Infermedica API Configuration (for AI Symptom Checker)
+INFERMEDICA_APP_ID=your_infermedica_app_id_here
+INFERMEDICA_APP_KEY=your_infermedica_app_key_here
+
+# Edamam API Configuration (for Meal Plan Generator)
+EDAMAM_APP_ID=your_edamam_app_id_here
+EDAMAM_APP_KEY=your_edamam_app_key_here
+
+# Spoonacular API Configuration (for Diet Plan Generator)
+SPOONACULAR_API_KEY=your_spoonacular_api_key_here 
