--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test-email": "node test-email.js",
+    "test-symptom": "node test-symptom-checker.js",
+    "test-text-parsing": "node test-text-parsing.js"
   },
   "keywords": [
     "health",
@@ -19,7 +22,9 @@
   "author": "Smart Vitals Team",
   "license": "ISC",
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.13.23",
     "@clerk/express": "^1.7.13",
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.6.0",
     "bcrypt": "^6.0.0",
     "cloudinary": "^1.41.0",
@@ -35,6 +40,8 @@
     "mongoose": "^8.16.5",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.5",
     "openai": "^4.20.1",
     "pdfkit": "^0.14.0"
   },
